--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/NewAndrew.loader.js";
+      var loaderUrl = buildUrl + "/untiy.3D.done.loader.js";
       var config = {
-        dataUrl: buildUrl + "/NewAndrew.data.gz",
-        frameworkUrl: buildUrl + "/NewAndrew.framework.js.gz",
-        codeUrl: buildUrl + "/NewAndrew.wasm.gz",
+        dataUrl: buildUrl + "/untiy.3D.done.data",
+        frameworkUrl: buildUrl + "/untiy.3D.done.framework.js",
+        codeUrl: buildUrl + "/untiy.3D.done.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "house",
